--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: "Learn Chinese Through Stories"
 description: "Classic Stories for Chinese Language Learners."
-theme: minima  # Default GitHub Pages theme
+theme: jekyll-theme-lanyon
